--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ img.emoji {
 
 		</div>
 	</div>
-</div></div></div></div></div></div><div class="clearfix"></div></section><section id="intro" class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-blend nopb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex"><div class="container"><div class="row"><div class="res-m-btm wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1 vc_col-xs-12"><div class="vc_column-inner "><div class="wpb_wrapper">
+</div></div></div></div></div></div><div class="clearfix"></div></section>aaaaaaa<section id="intro" class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-blend nopb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex"><div class="container"><div class="row"><div class="res-m-btm wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1 vc_col-xs-12"><div class="vc_column-inner "><div class="wpb_wrapper">
 	<div class="wpb_single_image wpb_content_element vc_align_center">
 		
 		<figure class="wpb_wrapper vc_figure">
