--- a/index.html
+++ b/index.html
@@ -224,14 +224,13 @@ padding: 0 !important;
 </div>
 </div></div></div></div></div></div></div></div></div><div class="clearfix"></div></section><section id="tokensale" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361"><div class="wpb_column vc_column_container vc_col-sm-8 vc_col-md-offset-3 vc_col-md-6 vc_col-sm-offset-2"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="section-head text-center">
-            <h2 class="section-title">
-        Token Sale            <span>TOKEN</span>        </h2>
+            <h2 class="section-title">Early Supporters Program</h2>
 </div>
 
 
 <div class="wpb_text_column wpb_content_element  vc_custom_1520838333960 text-center">
     <div class="wpb_wrapper">
-        <p>ICO Crypto token will be released on the basis of Ethereum and Bitocin platform. It’s compatibility of the token with third-party services wallets, exchanges etc, and provides easy-to-use integration.</p>
+        <p>Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development.</p>
 
     </div>
 </div>
@@ -240,37 +239,37 @@ padding: 0 !important;
             <div class="col-sm-6">
         <div class="event-single-info">
             <h6>Start</h6>
-            <p>Feb 8, 2018 (9:00AM GMT)</p>
+            <p>May 16th 2018</p>
         </div>
     </div>
             <div class="col-sm-6">
         <div class="event-single-info">
-            <h6>Number of tokens for sale</h6>
-            <p>900,000 ICC (9%)</p>
+            <h6>Number of Coins for Sale</h6>
+            <p>500,000 (ACED)</p>
         </div>
     </div>
             <div class="col-sm-6">
         <div class="event-single-info">
             <h6>End</h6>
-            <p>Feb 20, 2018 (11:00AM GMT)</p>
+            <p>May  23 2018</p>
         </div>
     </div>
             <div class="col-sm-6">
         <div class="event-single-info">
-            <h6>Tokens exchange rate</h6>
-            <p>1 ETH = 650 ICC, 1 BTC = 1940 ICC</p>
+            <h6>Coin Price</h6>
+            <p>0.75 USD</p>
         </div>
     </div>
             <div class="col-sm-6">
         <div class="event-single-info">
             <h6>Acceptable currencies</h6>
-            <p>ETH, BTC, LTC</p>
+            <p>BTC</p>
         </div>
     </div>
             <div class="col-sm-6">
         <div class="event-single-info">
-            <h6>Minimal transaction amount</h6>
-            <p>1 ETH/ 1 BTC/ 1 LTC</p>
+            <h6>Minimal Transaction Amount</h6>
+            <p>$200</p>
         </div>
     </div>
         </div>
