--- a/index.html
+++ b/index.html
@@ -317,74 +317,75 @@ of proceeds</h3>
 
 <div class="vc_empty_space" style="height: 50px"><span class="vc_empty_space_inner"></span></div>
 </div></div></div></div><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper">
-<div class="row roadmap-list align-items-end">
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-sm roadmap-done">
-            <h6>March 2018</h6>
-            <p>Start of the ICO Crypto Platform Development.</p>
-        </div>
-    </div>
-            <div class="col-lg width-0">
-        <div class="single-roadmap roadmap-sm roadmap-done roadmap-down">
-            <h6>June 2018</h6>
-            <p>Over 100 merchants on site</p>
-        </div>
-    </div>
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-lg ">
-            <h6>June 2018</h6>
-            <p>Launched of mobile Apps</p>
-        </div>
-    </div>
-            <div class="col-lg width-0">
-        <div class="single-roadmap roadmap-sm  roadmap-down">
-            <h6>August 2018</h6>
-            <p>ICO preparation &amp; Press Tour</p>
-        </div>
-    </div>
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-sm ">
-            <h6>October 2018</h6>
-            <p>Start Token Sale Round (1)</p>
-        </div>
-    </div>
-            <div class="col-lg width-0">
-        <div class="single-roadmap roadmap-sm  roadmap-down">
-            <h6>December 2018</h6>
-            <p>Partnership for the future EcoSystem</p>
-        </div>
-    </div>
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-lg ">
-            <h6>January 2019</h6>
-            <p>Our team set-up and commercial preparation</p>
-        </div>
-    </div>
-            <div class="col-lg width-0">
-        <div class="single-roadmap roadmap-sm  roadmap-down">
-            <h6>May 2019</h6>
-            <p>Priority opening for Token holder</p>
-        </div>
-    </div>
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-sm ">
-            <h6>June 2019</h6>
-            <p>Start Token Sale Round (2)</p>
-        </div>
-    </div>
-            <div class="col-lg width-0">
-        <div class="single-roadmap roadmap-sm  roadmap-down">
-            <h6>Octorber 2019</h6>
-            <p>Blockchain usage announcement for global Network</p>
-        </div>
-    </div>
-            <div class="col-lg ">
-        <div class="single-roadmap roadmap-lg ">
-            <h6>December 2019</h6>
-            <p>Operational Launch United States to general</p>
-        </div>
-    </div>
-        </div>
+<!--<div class="row roadmap-list align-items-end">-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-sm roadmap-done">-->
+            <!--<h6>March 2018</h6>-->
+            <!--<p>Start of the ICO Crypto Platform Development.</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg width-0">-->
+        <!--<div class="single-roadmap roadmap-sm roadmap-done roadmap-down">-->
+            <!--<h6>June 2018</h6>-->
+            <!--<p>Over 100 merchants on site</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-lg ">-->
+            <!--<h6>June 2018</h6>-->
+            <!--<p>Launched of mobile Apps</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg width-0">-->
+        <!--<div class="single-roadmap roadmap-sm  roadmap-down">-->
+            <!--<h6>August 2018</h6>-->
+            <!--<p>ICO preparation &amp; Press Tour</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-sm ">-->
+            <!--<h6>October 2018</h6>-->
+            <!--<p>Start Token Sale Round (1)</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg width-0">-->
+        <!--<div class="single-roadmap roadmap-sm  roadmap-down">-->
+            <!--<h6>December 2018</h6>-->
+            <!--<p>Partnership for the future EcoSystem</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-lg ">-->
+            <!--<h6>January 2019</h6>-->
+            <!--<p>Our team set-up and commercial preparation</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg width-0">-->
+        <!--<div class="single-roadmap roadmap-sm  roadmap-down">-->
+            <!--<h6>May 2019</h6>-->
+            <!--<p>Priority opening for Token holder</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-sm ">-->
+            <!--<h6>June 2019</h6>-->
+            <!--<p>Start Token Sale Round (2)</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg width-0">-->
+        <!--<div class="single-roadmap roadmap-sm  roadmap-down">-->
+            <!--<h6>Octorber 2019</h6>-->
+            <!--<p>Blockchain usage announcement for global Network</p>-->
+        <!--</div>-->
+    <!--</div>-->
+            <!--<div class="col-lg ">-->
+        <!--<div class="single-roadmap roadmap-lg ">-->
+            <!--<h6>December 2019</h6>-->
+            <!--<p>Operational Launch United States to general</p>-->
+        <!--</div>-->
+    <!--</div>-->
+        <!--</div>-->
+    <img src="loadmap.png" style="text-align: center; width: 80%; margin-left: 10%;">
 
 </div></div></div></div></div></div></div></div></div><div class="clearfix"></div></section><section id="team" class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt section-fix"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-3 vc_col-lg-6 vc_col-md-offset-2 vc_col-md-8"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="section-head text-center">
