--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ of proceeds</h3>
         <img src="Tom_C.png" alt="">
         <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/waylon-dalton/" class="expand-trigger content-popup"></span>        </div>
     <div class="team-info">
-        <h5 class="team-name">Tom C</h5>
+        <h5 class="team-name">@Tom C</h5>
         <span class="team-title">Technical Lead Crypto Sharks</span>
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
@@ -421,7 +421,7 @@ of proceeds</h3>
         <img src="Anthony_Kaz.png" alt="">
         <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/stefan-harary/" class="expand-trigger content-popup"></span>        </div>
     <div class="team-info">
-        <h5 class="team-name">Anthony Kaz</h5>
+        <h5 class="team-name">@Anthony Kaz</h5>
         <span class="team-title">Community Manager @Kaz</span>
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
@@ -437,7 +437,7 @@ of proceeds</h3>
         <img src="Fahim.jpg" alt="">
         <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/moises-teare/" class="expand-trigger content-popup"></span>        </div>
     <div class="team-info">
-        <h5 class="team-name">Fahim</h5>
+        <h5 class="team-name">@Fahim</h5>
         <span class="team-title">Advisor @black_panther</span>
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
@@ -453,7 +453,7 @@ of proceeds</h3>
         <img src="Lakhan.png" alt="">
         <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span>        </div>
     <div class="team-info">
-        <h5 class="team-name">Lakhan Mohan</h5>
+        <h5 class="team-name">@Lakhan Mohan</h5>
         <span class="team-title">Advisor @willie</span>
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
