--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ of proceeds</h3>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3"><div class="vc_column-inner "><div class="wpb_wrapper">
     <div class="team-circle text-center">
         <div class="team-photo">
-            <img src="Lakhan.png" alt="">
+            <img src="Alshimary.jpg" alt="">
             <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span>        </div>
         <div class="team-info">
             <h5 class="team-name">H.Alshimary</h5>
