--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ padding: 0 !important;
                 <section class="vc_rows wpb_row vc_row-fluid mobile-center banner-particle banner-curb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex banner d-flex align-items-center"><div class="container"><div class="banner-content"><div class="row"><div class="order-lg-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
     <div class="wpb_wrapper">
-        <h1>Powering Data for the new equity blockchain</h1>
+        <h1>powering data for the new equity block</h1>
 <p class="lead color-secondary">Privacy oriented platform, providing best in class anonymity for users and their transactions.</p>
 <ul class="btns">
 <li><a class="btn" href="#">Sign up to Join</a></li>
-<li><a class="btn btn-alt" href="#">TOKEN DISTRIBUTION</a></li>
+<li><a class="btn btn-alt" href="#tokensale">TOKEN DISTRIBUTION</a></li>
 </ul>
 
     </div>
@@ -169,7 +169,7 @@ padding: 0 !important;
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6 vc_col-sm-offset-1"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  text-block">
     <div class="wpb_wrapper">
-        <h4>What is ICO Crypto?</h4>
+        <h4>AceD Coin Specifications</h4>
 <p class="lead">ICO Crypto is a platform for the future of funding that powering dat for the new equity blockchain.</p>
 <p>While existing solutions offer to solve just one problem at a time, our team is up to build a secure, useful, &amp; easy-to-use product based on private blockchain. It will include easy cryptocurrency payments integration, and even a digital arbitration system.</p>
 <p>At the end, Our aims to integrate all companies, employees, and business assets into a unified blockchain ecosystem, which will make business truly efficient, transparent, and reliable.</p>
