--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ padding: 0 !important;
         <h1>powering data for the new equity block</h1>
 <p class="lead color-secondary">Privacy oriented platform, providing best in class anonymity for users and their transactions.</p>
 <ul class="btns">
-<li><a class="btn" href="#">Sign up to Join</a></li>
+<li><a class="btn" href="https://discord.gg/yMTRTsj">Sign up to Join</a></li>
 <li><a class="btn btn-alt" href="#tokensale">TOKEN DISTRIBUTION</a></li>
 </ul>
 
