--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ padding: 0 !important;
 
                 <h1 class="navbar-brand">
                                             <a href="http://wpdemo.oceanthemes.net/icos/">
-                        <img class="logo" src="logo.png" alt="ICOs">
-                        <img class="logo-2" src="logo.png" alt="ICOs">
+                        <img class="logo" src="logo-white.png" alt="ICOs">
+                        <img class="logo-2" src="logo-white.png" alt="ICOs">
                     </a>
                 </h1>
 
@@ -385,23 +385,7 @@ of proceeds</h3>
         <!--</div>-->
     <!--</div>-->
         <!--</div>-->
-    <div class="row">
-    <div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">
-    <div class="blog-photo">
-    <img src="loadmap.png" alt="">
-    </div>
-    </div><!-- .col -->
-    <div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">
-    <div class="blog-photo">
-    <img src="graph-dark-c1.jpg" alt="">
-    </div>
-    </div><!-- .col -->
-    <div class="col-lg-4 offset-lg-0 col-sm-8 offset-sm-2">
-    <div class="blog-photo">
-    <img src="graph-dark-b1.jpg" alt="">
-    </div>
-    </div><!-- .col -->
-    </div>
+    <img src="loadmap.png" style="text-align: center; width: 80%; margin-left: 10%;">
 
 </div></div></div></div></div></div></div></div></div><div class="clearfix"></div></section><section id="team" class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt section-fix"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-3 vc_col-lg-6 vc_col-md-offset-2 vc_col-md-8"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="section-head text-center">
