--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ padding: 0 !important;
     </div>
 </div>
 
-<a href="https://www.youtube.com/watch?v=SSo_EIwHSd4" class="play-btn video-play">
-    <em class="play"><span></span></em>
-    <span>Watch Video</span>        <span>What and How it work</span>    </a>
+<!--<a href="https://www.youtube.com/watch?v=SSo_EIwHSd4" class="play-btn video-play">-->
+    <!--<em class="play"><span></span></em>-->
+    <!--<span>Watch Video</span>        <span>What and How it work</span>    </a>-->
 
 </div></div></div></div></div><div class="clearfix"></div></section><section class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt vc_row-o-equal-height vc_row-o-content-middle vc_row-flex"><div class="container"><div class="row"><div class="res-m-btm wpb_column vc_column_container vc_col-sm-5"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_single_image wpb_content_element vc_align_center">
