--- a/index.html
+++ b/index.html
@@ -171,9 +171,18 @@ padding: 0 !important;
     <div class="wpb_wrapper">
         <h2>AceD Coin Specifications</h2>
 <p class="lead">ICO Crypto is a platform for the future of funding that powering dat for the new equity blockchain.</p>
-<p>While existing solutions offer to solve just one problem at a time, our team is up to build a secure, useful, &amp; easy-to-use product based on private blockchain. It will include easy cryptocurrency payments integration, and even a digital arbitration system.</p>
-<p>At the end, Our aims to integrate all companies, employees, and business assets into a unified blockchain ecosystem, which will make business truly efficient, transparent, and reliable.</p>
-
+<!--<p>While existing solutions offer to solve just one problem at a time, our team is up to build a secure, useful, &amp; easy-to-use product based on private blockchain. It will include easy cryptocurrency payments integration, and even a digital arbitration system.</p>-->
+<!--<p>At the end, Our aims to integrate all companies, employees, and business assets into a unified blockchain ecosystem, which will make business truly efficient, transparent, and reliable.</p>-->
+        <ul>
+            <li><span style="font-weight: bold;color: #fff;">COIN NAME:</span> AceD (ACED)</li>
+            <li><span style="font-weight: bold;color: #fff;">MINING CATEGORY:</span> PoW + Masternode</li>
+            <li><span style="font-weight: bold;color: #fff;">ALGORITHM:</span> X11</li>
+            <li><span style="font-weight: bold;color: #fff;">MAX COINS:</span> 25,000,000</li>
+            <li><span style="font-weight: bold;color: #fff;">PREMINE:</span> 6%</li>
+            <li><span style="font-weight: bold;color: #fff;">MASTERNODE COLLATERAL:</span> 1000 ACED</li>
+            <li><span style="font-weight: bold;color: #fff;">TARGET BLOCK TIME:</span> 120 Seconds</li>
+            <li><span style="font-weight: bold;color: #fff;">BLOCK REWARD:</span> 20 (16 for MasterNodes; 4 for Miners)</li>
+        </ul>
     </div>
 </div>
 </div></div></div></div></div><div class="clearfix"></div></section><section id="application" class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-btoa"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361"><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-3 vc_col-lg-6 vc_col-md-offset-2 vc_col-md-8"><div class="vc_column-inner "><div class="wpb_wrapper">
@@ -184,8 +193,7 @@ padding: 0 !important;
         <span class="line-5"></span><span class="line-6"></span>
         <span class="line-7"></span><span class="line-8"></span>
     </div>
-            <h2 class="section-title">
-        The AceD Wallets </h2>
+            <h2 class="section-title">The AceD Wallets </h2>
 </div>
 
 
