--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ padding: 0 !important;
 
                 <h1 class="navbar-brand">
                                             <a href="http://wpdemo.oceanthemes.net/icos/">
-                        <img class="logo" src="logo-white.png" alt="ICOs">
-                        <img class="logo-2" src="logo-white.png" alt="ICOs">
+                        <img class="logo" src="logo.png" alt="ICOs">
+                        <img class="logo-2" src="logo.png" alt="ICOs">
                     </a>
                 </h1>
 
