--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ padding: 0 !important;
 <div class="wpb_text_column wpb_content_element  text-block">
     <div class="wpb_wrapper">
         <h2>AceD Coin Specifications</h2>
-<p class="lead">ICO Crypto is a platform for the future of funding that powering dat for the new equity blockchain.</p>
+<p class="lead">AceD coin is a privacy oriented platform.  Community driven currency, anyone can create or vote AceD governance proposals. Features include private send and instant payments. Transactions are 100% private and confirm in less than 1 second.</p>
 <!--<p>While existing solutions offer to solve just one problem at a time, our team is up to build a secure, useful, &amp; easy-to-use product based on private blockchain. It will include easy cryptocurrency payments integration, and even a digital arbitration system.</p>-->
 <!--<p>At the end, Our aims to integrate all companies, employees, and business assets into a unified blockchain ecosystem, which will make business truly efficient, transparent, and reliable.</p>-->
         <ul>
