--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ padding: 0 !important;
                 <section class="vc_rows wpb_row vc_row-fluid mobile-center banner-particle banner-curb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex banner d-flex align-items-center"><div class="container"><div class="banner-content"><div class="row"><div class="order-lg-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
     <div class="wpb_wrapper">
-        <h1>Value in Anonymity,  Privacy oriented platform.</h1>
+        <h1>Value in Anonymity, Decentralized Masternodes.</h1>
 <p class="lead color-secondary">Privacy oriented platform, providing best in class anonymity for users and their transactions.</p>
 <ul class="btns">
 <li><a class="btn" href="https://discord.gg/yMTRTsj">Sign up to Join</a></li>
