--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ padding: 0 !important;
 <div class="wpb_single_image wpb_content_element vc_align_center">
 
     <figure class="wpb_wrapper vc_figure">
-        <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="graph-dark-c1.jpg" class="vc_single_image-img attachment-full" alt="" srcset="graph-dark-c1.jpg 900w, graph-dark-c1.jpg 300w, graph-dark-c1.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
+        <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="3_Image-066.jpg" class="vc_single_image-img attachment-full" alt="" srcset="3_Image-066.jpg 900w, 3_Image-066.jpg 300w, 3_Image-066.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
     </figure>
 </div>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1"><div class="vc_column-inner "><div class="wpb_wrapper">
