--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ padding: 0 !important;
 </div></div></div><div class="order-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  header-image">
     <div class="wpb_wrapper" style="text-align: center;">
-        <p><img src="AceD-01.jpg" alt="header"><br>
+        <p><img src="AceD-01.jpg" alt="header" style="width: 87%;max-width: 631px;"><br>
 <!--<img class="header-image-icon left-icon" src="header-icon-a.png" alt="header-icon"><br>-->
 <!--<img class="header-image-icon right-icon" src="header-icon-b.png" alt="header-icon"></p>-->
 
@@ -395,7 +395,7 @@ padding: 0 !important;
         <!--</div>-->
     <!--</div>-->
         <!--</div>-->
-    <img src="loadmap.png" style="text-align: center; width: 80%; margin-left: 10%;">
+    <img src="Roadmap.jpg" style="text-align: center;">
 
 </div></div></div></div></div></div></div></div></div><div class="clearfix"></div></section><section id="team" class="vc_rows wpb_row vc_row-fluid section-pad no-pb section-bg-alt section-fix"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner "><div class="wpb_wrapper"><div class="vc_row wpb_row vc_inner vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-3 vc_col-lg-6 vc_col-md-offset-2 vc_col-md-8"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="section-head text-center">
