--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ padding: 0 !important;
 
                 <h1 class="navbar-brand">
                                             <a href="http://wpdemo.oceanthemes.net/icos/">
-                        <img class="logo" src="logo.png" alt="ICOs">
-                        <img class="logo-2" src="logo.png" alt="ICOs">
+                        <img class="logo" src="logo-white.png" alt="ICOs">
+                        <img class="logo-2" src="logo-white.png" alt="ICOs">
                     </a>
                 </h1>
 
@@ -82,22 +82,16 @@ padding: 0 !important;
                 </button>
 
                 <div class="navbar-collapse justify-content-end">
-                    <ul id="menu-onepage-menu" class="navbar-nav"><li id="menu-item-150" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a href="#intro" class="nav-link">What is ico</a></li>
-<li id="menu-item-241" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#tokensale" class="nav-link">Token Sale</a></li>
+                    <ul id="menu-onepage-menu" class="navbar-nav"><li id="menu-item-150" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a href="#intro" class="nav-link">What is AccD</a></li>
+<li id="menu-item-241" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#tokensale" class="nav-link">Early Supporters</a></li>
 <li id="menu-item-242" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a href="#roadmap" class="nav-link">Roadmap</a></li>
 <li id="menu-item-243" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-243"><a href="#team" class="nav-link">Team</a></li>
-<li id="menu-item-244" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-244"><a href="#partners" class="nav-link">Partners</a></li>
-<li id="menu-item-245" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-245"><a href="#media" class="nav-link">More</a>
-<ul class="sub-menu">
-<li id="menu-item-246" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a href="#media">Media Partners</a></li>
-<li id="menu-item-357" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-357"><a href="#latestblog">Blog</a></li>
-<li id="menu-item-247" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-247"><a href="#faqs">FAQs</a></li>
-</ul>
-</li>
+<li id="menu-item-246" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a href="#media">Events</a></li>
+<li id="menu-item-247" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-247"><a href="#faqs">FAQ</a></li>
 <li id="menu-item-248" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-248"><a href="#contact" class="nav-link">Contact</a></li>
 </ul>                        <ul class="navbar-nav navbar-btns">                            
-                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#">Whitepaper</a></li>
-                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#application">Try App</a></li>
+                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#application">Wallets</a></li>
+                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#">Discord</a></li>
                     </ul>
                 </div>
             </nav>
