--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ padding: 0 !important;
                 </button>
 
                 <div class="navbar-collapse justify-content-end">
-                    <ul id="menu-onepage-menu" class="navbar-nav"><li id="menu-item-150" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a href="#intro" class="nav-link">What is AccD</a></li>
+                    <ul id="menu-onepage-menu" class="navbar-nav"><li id="menu-item-150" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a href="#intro" class="nav-link">What is AceD?</a></li>
 <li id="menu-item-241" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a href="#tokensale" class="nav-link">Early Supporters</a></li>
 <li id="menu-item-242" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a href="#roadmap" class="nav-link">Roadmap</a></li>
 <li id="menu-item-243" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-243"><a href="#team" class="nav-link">Team</a></li>
@@ -247,7 +247,7 @@ padding: 0 !important;
                             <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
                                 <div class="wpb_wrapper">
                                     <h2>Early Supporters Program</h2>
-                                    <p class="lead">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development.</p>
+                                    <p class="lead">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a>  and contact  @MaGe-AceD#9956 for sales inquiries.</p>
                                 </div>
                             </div>
                         </div></div></div></div></div>
