--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ padding: 0 !important;
 <li id="menu-item-248" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-248"><a href="#contact" class="nav-link">Contact</a></li>
 </ul>                        <ul class="navbar-nav navbar-btns">                            
                         <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#application">Wallets</a></li>
-                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="#">Discord</a></li>
+                        <li class="nav-item"><a class="nav-link btn btn-sm btn-outline menu-link" href="https://discord.gg/yMTRTsj">Discord</a></li>
                     </ul>
                 </div>
             </nav>
@@ -106,8 +106,8 @@ padding: 0 !important;
         <h1>Value in Anonymity, Decentralized Masternodes.</h1>
 <p class="lead color-secondary">Privacy oriented platform, providing best in class anonymity for users and their transactions.</p>
 <ul class="btns">
-<li><a class="btn" href="https://discord.gg/yMTRTsj">Sign up to Join</a></li>
-<li><a class="btn btn-alt" href="#tokensale" class="nav-link">TOKEN DISTRIBUTION</a></li>
+<li><a class="btn" href="https://discord.gg/yMTRTsj">JOIN DISCORD</a></li>
+<li><a class="btn btn-alt" href="#tokensale" class="nav-link">Early Supporters  Program</a></li>
 </ul>
 
     </div>
@@ -115,7 +115,7 @@ padding: 0 !important;
 
 <ul class="social">
             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
-            <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+            <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
             <li><a href="#"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
             <li><a href="#"><em class="fa fa-github" aria-hidden="true"></em></a></li>
             <li><a href="#"><em class="fa fa-btc" aria-hidden="true"></em></a></li>
@@ -294,11 +294,11 @@ padding: 0 !important;
                         </div></div></div><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-1 vc_col-lg-5 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
                         <div class="countdown-box text-center ">
                                             <div class="token-countdown d-flex align-content-stretch" data-date="2018/05/25"><div class="col"><span class="countdown-time">19</span><span class="countdown-text">Days</span></div><div class="col"><span class="countdown-time">04</span><span class="countdown-text">Hours</span></div><div class="col"><span class="countdown-time">37</span><span class="countdown-text">Minutes</span></div><div class="col"><span class="countdown-time countdown-time-last">08</span><span class="countdown-text">Seconds</span></div></div>
-                            <a class="btn btn-alt btn-sm" href="#" target="_self">Join &amp; BUY TOKEN NOW</a>                <ul class="icon-list">
+                            <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join &amp; BUY TOKEN NOW</a>                <ul class="icon-list">
                                             <li><em class="fa fa-btc" aria-hidden="true"></em></li>
-                                            <li><em class="fa fa-krw" aria-hidden="true"></em></li>
-                                            <li><em class="fa fa-cc-visa" aria-hidden="true"></em></li>
-                                            <li><em class="fa fa-cc-mastercard" aria-hidden="true"></em></li>
+                                            <!--<li><em class="fa fa-krw" aria-hidden="true"></em></li>-->
+                                            <!--<li><em class="fa fa-cc-visa" aria-hidden="true"></em></li>-->
+                                            <!--<li><em class="fa fa-cc-mastercard" aria-hidden="true"></em></li>-->
                                         </ul>
                                 </div>
 
@@ -338,7 +338,7 @@ padding: 0 !important;
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                             <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                            <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                            <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                         </ul>
                 </div>
 </div>
@@ -354,7 +354,7 @@ padding: 0 !important;
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                             <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                            <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                            <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                         </ul>
                 </div>
 </div>
@@ -370,7 +370,7 @@ padding: 0 !important;
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                             <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                            <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                            <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                         </ul>
                 </div>
 </div>
@@ -386,7 +386,7 @@ padding: 0 !important;
                     <ul class="team-social">
                             <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                             <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                            <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                            <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                         </ul>
                 </div>
 </div>
@@ -402,7 +402,7 @@ padding: 0 !important;
             <ul class="team-social">
                 <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                 <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
             </ul>
         </div>
     </div>
@@ -418,7 +418,7 @@ padding: 0 !important;
             <ul class="team-social">
                 <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
                 <li><a href="#"><em class="fa fa-linkedin" aria-hidden="true"></em></a></li>
-                <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
             </ul>
         </div>
     </div>
@@ -977,7 +977,7 @@ if (!window.mc4wp) {
 
                     <ul class="social">
                                                         <li><a href="#"><em class="fa fa-facebook" aria-hidden="true"></em></a></li>
-                                                        <li><a href="#"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
+                                                        <li><a href="https://twitter.com/AcedCoin"><em class="fa fa-twitter" aria-hidden="true"></em></a></li>
                                                         <li><a href="#"><em class="fa fa-youtube-play" aria-hidden="true"></em></a></li>
                                                         <li><a href="#"><em class="fa fa-github" aria-hidden="true"></em></a></li>
                                                         <li><a href="#"><em class="fa fa-bitcoin" aria-hidden="true"></em></a></li>
