--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ padding: 0 !important;
         <!-- End Navbar -->
     </header>
     <!-- End Header -->
+    <!-- End Header -->
 
                 <section style="background:#000;" class="vc_rows wpb_row vc_row-fluid mobile-center banner-particle banner-curb vc_row-o-equal-height vc_row-o-content-middle vc_row-flex banner d-flex align-items-center"><div class="container"><div class="banner-content"><div class="row"><div class="order-lg-first wpb_column vc_column_container vc_col-sm-12 vc_col-lg-6 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
@@ -293,7 +294,7 @@ padding: 0 !important;
 
                         </div></div></div><div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-1 vc_col-lg-5 vc_col-md-6"><div class="vc_column-inner "><div class="wpb_wrapper">
                         <div class="countdown-box text-center ">
-                                            <div class="token-countdown d-flex align-content-stretch" data-date="2018/05/25"><div class="col"><span class="countdown-time">19</span><span class="countdown-text">Days</span></div><div class="col"><span class="countdown-time">04</span><span class="countdown-text">Hours</span></div><div class="col"><span class="countdown-time">37</span><span class="countdown-text">Minutes</span></div><div class="col"><span class="countdown-time countdown-time-last">08</span><span class="countdown-text">Seconds</span></div></div>
+                                            <div class="token-countdown d-flex align-content-stretch" data-date="2018/05/16"><div class="col"><span class="countdown-time">16</span><span class="countdown-text">Days</span></div><div class="col"><span class="countdown-time">00</span><span class="countdown-text">Hours</span></div><div class="col"><span class="countdown-time">00</span><span class="countdown-text">Minutes</span></div><div class="col"><span class="countdown-time countdown-time-last">00</span><span class="countdown-text">Seconds</span></div></div>
                             <a class="btn btn-alt btn-sm" href="https://discord.gg/yMTRTsj" target="_self">Join &amp; BUY TOKEN NOW</a>                <ul class="icon-list">
                                             <li><em class="fa fa-btc" aria-hidden="true"></em></li>
                                             <!--<li><em class="fa fa-krw" aria-hidden="true"></em></li>-->
