--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ padding: 0 !important;
                             <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
                                 <div class="wpb_wrapper">
                                     <h2>Early Supporters Program</h2>
-                                    <p class="lead">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a>  and contact  @MaGe-AceD#9956 for sales inquiries.</p>
+                                    <p class="lead">Join AceD Early supporters program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a>  and contact  @MaGe--AceD#9956 for sales inquiries.</p>
                                 </div>
                             </div>
                         </div></div></div></div></div>
