--- a/index.html
+++ b/index.html
@@ -210,18 +210,18 @@ padding: 0 !important;
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1"><div class="vc_column-inner "><div class="wpb_wrapper">
 <div class="wpb_text_column wpb_content_element  text-block">
     <div class="wpb_wrapper">
-        <p>Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc itation ullamco laboris nisi commodo consequat.</p>
-<ul>
-<li>Crypto-news curation</li>
-<li>Natural Language Understanding</li>
-<li>Wallet aggregation</li>
-<li>Professional Network</li>
-<li>No more expensive fees</li>
-</ul>
-<ul class="btns">
-<li><a class="btn btn-sm" href="#">GET THE APP NOW</a></li>
-<li><a href="#"><em class="fa fa-apple" aria-hidden="true">ios</em></a><a href="#"><em class="fa fa-android" aria-hidden="true">android</em></a><a href="#"><em class="fa fa-windows" aria-hidden="true">windows</em></a></li>
-</ul>
+        <p>(Coming Soon)</p>
+        <div class="coicon">
+            <div><img src="windows.png"/></div>
+            <div><img src="Linux-icon.png"/></div>
+            <div><img src="Apple-icon.png"/></div>
+            <div><img src="raspberry-pi.png"/></div>
+        </div>
+
+        <!--<ul class="btns">-->
+        <!--<li><a class="btn btn-sm" href="#">GET THE APP NOW</a></li>-->
+        <!--<li><a href="#"><em class="fa fa-apple" aria-hidden="true">ios</em></a><a href="#"><em class="fa fa-android" aria-hidden="true">android</em></a><a href="#"><em class="fa fa-windows" aria-hidden="true">windows</em></a></li>-->
+        <!--</ul>-->
 
     </div>
 </div>
